--- a/Mande.css
+++ b/Mande.css
@@ -51,7 +51,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('d.WEBP') center/cover no-repeat;
+    background: url('fund.png') center/cover no-repeat;
     opacity: 0.3;
     z-index: -1;
 }
